# UzduotisSuPazymiais-v0.1-

./: CMakeLists.txt  Funkcijos.cpp  Funkcijos.h  Pazymiai(su masyvais).cpp  Pazymiai(su vektoriais).cpp  README.md  Source.cpp  Studentas.h  Text.txt  deque.h  deque1.cpp  deque1.h  deque2.cpp  deque2.h  generateFiles.cpp  generatefiles.cpp  list.cpp  list.h  list1.cpp  list1.h  list2.cpp  list2.h  pazymiai v02.cpp  vector.cpp  vector.h  vector1.cpp  vector1.h  vector2.cpp  vector2.h
